--- a/Subject.html
+++ b/Subject.html
@@ -1,4 +1,4 @@
-قصدي مربعات تفتح الشتات دي زي ده<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ar">
 <head>
   <meta charset="UTF-8">
@@ -136,3 +136,4 @@
   </main>
 </body>
 </html>
+
