--- a/AI/index.html
+++ b/AI/index.html
@@ -191,44 +191,51 @@
     <script>
         
         // ===================================
-        // محتوى data.js - تم تحديثه ليناسب أوراق عمل الذكاء الاصطناعي و Python
+        // محتوى data.js - تم تحديث id للمطابقة مع أسماء الملفات المطلوبة
         // ===================================
 
         const data = [
             {
-                id: '1.html', 
-                title: 'مقدمة في الذكاء الاصطناعي (AI)',
-                description: 'مفاهيم الذكاء الاصطناعي، تعلم الآلة، التعلم العميق، والأبعاد الأخلاقية.',
+                // تم تعديل id
+                id: 'Sheet 1.html', 
+                title: 'مقدمة في البرمجة',
+                description: 'رحلة البداية في عالم الأكواد والمنطق الحاسوبي.',
             },
             {
-                id: 'Sheet 2.html', 
-                title: 'أساسيات Python (البيانات، الدوال، الاستثناءات)',
-                description: 'المتغيرات، القوائم، الثلاثيات (Tuples)، تعريف الدوال، والتعامل مع الأخطاء (try-except).',
+                // تم تعديل id
+                id: 'Sheet 2.html', 
+                title: 'مفاهيم HTML المتقدمة',
+                description: 'التعمق في بنية الويب وعناصر الإدخال والوسائط.',
             },
             {
-                id: 'Sheet 3 (Python Sets).html',
-                title: 'مجموعات Python (Sets) والعمليات عليها',
-                description: 'إنشاء المجموعات، الخصائص، العمليات الجبرية للمجموعات (الاتحاد، التقاطع، الفرق).',
-            },
-            {
+                // تم تعديل id
                 id: 'Sheet 3 (Part 2).html',
-                title: 'مقارنات، عامل الهوية (is)، وقوائم Comprehension',
-                description: 'عبارات match-case، عوامل العضوية (in)، عامل الهوية (is)، وكيفية بناء القوائم المختصرة.',
+                title: 'مقدمة في CSS',
+                description: 'كيفية تجميل صفحات الويب وتنسيقها باحترافية.',
             },
             {
+                // تم تعديل id
+                id: 'Sheet 3 (Python Sets).html',
+                title: 'مجموعات بايثون (Python Sets)',
+                description: 'تعلم كيفية استخدام المجموعات في بايثون لتمثيل البيانات الفريدة.',
+            },
+            {
+                // تم تعديل id
                 id: 'Sheet 4 (Part 1).html',
-                title: 'مقارنة هياكل البيانات (List, Tuple, Set, Dict)',
-                description: 'جدول مقارنة شامل للعمليات والخصائص الأساسية لأربع هياكل بيانات في Python.',
+                title: 'مقدمة في JavaScript',
+                description: 'الخطوات الأولى لإضافة التفاعل والمنطق لصفحات الويب.',
             },
             {
+                // تم تعديل id
                 id: 'Sheet 4 (Part 2).html',
-                title: 'ميزات Python المتقدمة (enumerate, zip, lambda, JSON, *args)',
-                description: 'الدوال المدمجة، دوال lambda، التعامل مع JSON، وتمرير عدد متغير من الوسائط.',
+                title: 'حلقات التكرار في JavaScript',
+                description: 'تعلم كيفية تكرار المهام باستخدام حلقات التكرار مثل (for) و (while).',
             },
             {
+                // تم تعديل id
                 id: 'Sheet 5.html',
-                title: 'مكتبات علم البيانات (NumPy, Pandas, Matplotlib)',
-                description: 'أساسيات NumPy للمصفوفات، Pandas للـ DataFrames، و Matplotlib للرسوم البيانية.',
+                title: 'أساسيات الشبكات',
+                description: 'مقدمة لمفاهيم الشبكات، عناوين IP، والبروتوكولات الأساسية.',
             }
         ];
 
