--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
     	     <h2>Subject</h2>
     	     <p>انقر هنا لفتح المجلد على Google Drive</p>
         </a>
-	<a href="https://batechu.it-club.top/lms/login" class="card">
+	<a href="https://www.batechu.com/lms/dashboard" class="card">
     		<h2>LMS</h2>
     		<p>انقر هنا لتسجيل الدخول إلى منصة LMS</p>
 	</a>
@@ -209,6 +209,7 @@
     </main>
 </body>
 </html>
+
 
 
 
